Move css and pictures to public folder. Refactor image references in JS files.

--- a/Client/public/index.css
+++ b/Client/public/index.css
@@ -13,7 +13,7 @@ code {
 }
 
 #banner {
-  background-image: url(./pictures/mountainbackground.jpg);
+  background-image: url(/mountainbackground.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position-y: 44%;
